<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="@string/grammatika"
        android:id="@+id/menu_gramma"
        android:icon="@drawable/gramm">

    </item>

    <item android:title="@string/aloqa">
        <menu>
            <item android:title="@string/baham_ko_rish"
                android:id="@+id/menu_share"
                android:icon="@drawable/share"/>

            <item
                android:title="@string/baholash"
                android:id="@+id/menu_rate"
                android:icon="@drawable/rate"/>
        </menu>

    </item>

    <item android:title="@string/privacy_policy">
        <menu>
            <item android:title="@string/privacy_policy"
                android:id="@+id/menu_privacy_policy"
                android:icon="@drawable/privacy_policy"/>
        </menu>
    </item>

<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
<!--        <item-->
<!--            android:id="@+id/nav_tools"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_tools" />-->
<!--    </group>-->

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
