<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/liner_alphabet"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/image_alphabet"
            android:src="@drawable/abc">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_alphabet"
            android:text="@string/koreys_alfaviti"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/liner_topishmoq"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/image_topishmoq"
            android:src="@drawable/puzzle">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_topishmoq"
            android:text="@string/koreys_topishmoqlari"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/liner_tezAyt"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/image_tezAyt"
            android:src="@drawable/tongue">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tezAyt"
            android:text="Koreyscha tez aytishlar"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/liner_test"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/image_test"
            android:src="@drawable/t">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_test"
            android:text="@string/koreys_test"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark">
        </TextView>
    </LinearLayout>

</LinearLayout>